--- a/Loyalty4/SPosLoyalty4ServerIcon/SPosLoyalty4ServerIcon.vcxproj.filters
+++ b/Loyalty4/SPosLoyalty4ServerIcon/SPosLoyalty4ServerIcon.vcxproj.filters
@@ -93,6 +93,9 @@
     <ClInclude Include="..\SPosLoyalty4Shared\FileRemover.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\SPosLoyalty4Shared\SolutionGlobalFunctions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SPosLoyalty4ServerIcon.cpp">
@@ -162,6 +165,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="MessageLogger.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\SPosLoyalty4Shared\SolutionGlobalFunctions.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
